# hello-agent-assignment

./: .gitignore
packaged-agent/: README.md  pyproject.toml
packaged-agent/src/hello_agent/: __init__.py  main.py
simple-agent/: README.md  main.py  pyproject.toml
